<resources>
    <string name="app_name">Controle Alimentar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="Email">E-mail</string>
    <string name="Nome">Nome</string>
    <string name="metas_diarias">Meta diária</string>
    <string name="salvar">Salvar</string>
    <string name="carboidrato">Carboidratos</string>
    <string name="proteina">Proteínas</string>
    <string name="gordura">Gorduras</string>
    <string name="caloria">Calorias</string>
    <string name="editar_metas">Editar Meta</string>
    <string name="abreviacao_hora">H</string>
    <string name="kcal_value_cafe_manha">0</string>
    <string name="Kcal">Kcal</string>
    <string name="proteina_cafe_manha_value">0</string>
    <string name="prot">Prot.</string>
    <string name="cafe_da_manha">Café da manhã -</string>
    <string name="horario_cafe_manha">7 : 15</string>
    <string name="carboidrato_cafe_manha_value">0</string>
    <string name="carb">Carb.</string>
    <string name="gordura_cafe_manha_value">0</string>
    <string name="gord">Gord.</string>
    <string name="kcal_lanche_manha_value">0</string>
    <string name="proteina_lanche_manha_value">0</string>
    <string name="carboidrato_lanche_manha_value">0</string>
    <string name="lanche_manha">Lanche da manhã -</string>
    <string name="horario_lanche_manha">10 : 15</string>
    <string name="gordura_lanche_manha_value">0</string>
    <string name="almoco">Almoço -</string>
    <string name="horario_almoco">12 : 00</string>
    <string name="kcal_almoco_value">0</string>
    <string name="proteina_almoco_value">0</string>
    <string name="carboidrato_almoco_value">0</string>
    <string name="gordura_almoco_value">0</string>
    <string name="lanche_tarde">Lanche da tarde -</string>
    <string name="horario_lanche_tarde">15 : 30</string>
    <string name="kcal_lanche_tarde_value">0</string>
    <string name="proteina_lanche_tarde_value">0</string>
    <string name="carboidrato_lanche_tarde_value">0</string>
    <string name="gordura_lache_tarde_value">0</string>
    <string name="janta">Janta -</string>
    <string name="horario_janta">19 : 00</string>
    <string name="kcal_janta_value">0</string>
    <string name="proteina_janta_value">0</string>
    <string name="carboidrato_janta_value">0</string>
    <string name="gordura_janta_value">0</string>
    <string name="cha_da_noite">Chá da noite -</string>
    <string name="horario_cha_noite">22 : 00</string>
    <string name="kcal_cha_noite_value">0</string>
    <string name="proteina_cha_noite_value">0</string>
    <string name="carboidrato_cha_noite_value">0</string>
    <string name="gordura_cha_noite_value">0</string>
    <string name="simbolo_mais">+</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="incluir_alimento">Incluir alimento</string>
    <string name="incluir_por_foto">Incluir por foto</string>
    <string name="buscar_alimento">Buscar alimento</string>
    <string name="dica_foto">Centralize a tabela nutricional no quadrado da câmera para extrairmos as informações</string>
    <string name="quanto_voce_comeu">Quanto você comeu ?</string>
    <string name="qual_porcao_tabela">Porção</string>
    <string name="mensagem_tela_erro">Tivemos um problema, tente novamente !</string>
    <string name="titulo_tela_erro">Ops !</string>
    <string name="tentar_novamente">Tentar novamente</string>
    <string name="caracteres_aceitos_campo_string">\ \abcdefghijklmnopqrstuvxwyzABCDEFGHIJKLMNOPQRSTUVXWYZÁáÃãÂâÀàÇçÉéÊêÍíÓóÔôÕõÚú</string>
    <string name="carecteres_aceitos_campo_email">1234567890abcdefghijklmnopqrstuvxwyzABCDEFGHIJKLMNOPQRSTUVXWYZÁáÃãÂâÀàÇçÉéÊêÍíÓóÔôÕõÚú@.-_</string>
    <string name="carecteres_aceitos_metas">1234567890.,</string>
    <string name="gramas">g</string>
    <string name="grama">gramas</string>
    <string name="arroz">Arroz</string>
    <string name="buscar">Buscar</string>
    <string name="alimento">Alimento</string>
    <string name="zero">0</string>
    <string name="valor">Valor</string>
    <string name="porcao">Porção:</string>
    <string name="cem">100g</string>
    <string name="ingerido">Ingerido</string>
    <string name="doisMil">2000</string>
    <string name="refeicoesText">Refeições</string>
    <string name="CentoECiquenta">150g</string>
    <string name="trintaESete">37,5g</string>
    <string name="duzentos">200g</string>
    <string name="cinquenta">50g</string>
    <string name="deletar">Deletar</string>
    <string name="editar">Editar</string>
    <string name="icone_para_deletar_alimento">Icone para deletar alimento</string>
    <string name="icone_para_editar_alimento">Icone para editar alimento</string>
    <string name="divider_de_um_alimento_para_outro">Divider de um alimento para outro</string>
    <string name="cone_para_fechar_popup">Ícone para fechar popup</string>
    <string name="nomeAlimento">Alimento:</string>
    <string name="alterar">ALTERAR</string>
    <string name="icone_para_adicionar_alimento_por_foto">Icone para adicionar alimento por foto</string>
    <string name="informa_es_da_tabela_nutricional_do_alimento">Informações da tabela nutricional do alimento</string>
    <string name="g_ml">g/ml</string>
    <string name="feeback">Feedback do seu último dia</string>
    <string name="emoji_feedback">Emoji feedback</string>
    <string name="controle_alimentar">Controle Alimentar</string>
    <string name="icone_para_editar_metas">Icone para editar meta</string>
    <string name="icone_para_historico_de_metas">Icone para historico de meta</string>
    <string name="hist_rico_de_metas">Histórico de meta</string>
    <string name="icone_adicionar_alimento_por_cadastro">Icone adicionar alimento por cadastro</string>
    <string name="icone_para_adicionar_alimento_por_busca">Icone para adicionar alimento por busca</string>
    <string name="voc_n_o_possui_nenhum_alimento_na_sua_refei_o_aproveite_e_cadastre_agora">Você não possui alimento na sua refeição. Aproveite e cadastre agora!</string>
    <string name="icone_para_incluir_alimento_na_refei_o">Icone para incluir alimento na refeição</string>
    <string name="icone_para_buscar_alimento_na_refei_o">Icone para buscar alimento na refeição</string>
    <string name="selecione_periodo_para_realizar_a_busca">Selecione periodo para realizar a busca</string>
    <string name="meta_atingida">Meta atingida</string>
    <string name="icone_para_expandir_meta">icone para expandir meta</string>
    <string name="_10_08_2020">10/08/2020</string>
    <string name="visualizar_refei_es">Visualizar refeições</string>
    <string name="cadastro">Cadastro</string>
    <string name="recuperar_cadastro"><u>Recuperar cadastro</u></string>
    <string name="digite_o_seu_e_mail_utilizado_no_cadastro">Digite o seu e-mail utilizado no cadastro:</string>
    <string-array name="porcoes_list_default">
        <item>gramas</item>
    </string-array>
    <string name="facebook_app_id">2124490031014689</string>
    <string name="fb_login_protocol_scheme">fb2124490031014689</string>
    <string name="dica_do_dia">Dica do dia!</string>
    <string name="ok">Ok</string>
    <string name="vimos_que_voc_n_o_conseguiu_atingir_sua_meta_de_b_carboidratos_b">Vimos que você não conseguiu atingir sua meta de <b>carboidratos</b></string>
    <string name="que_tal_incluir_b_p_o_de_forma_b_em_sua_dieta_ele_rico_em_carboidratos_mas_aten_o_cuidado_para_n_o_ultrapassar_o_limite_em_outros_macronutrientes">Que tal incluir <b>pão de forma</b> em sua dieta? Ele é rico em carboidratos. Mas atenção, cuidado para não ultrapassar o limite em outros macronutrientes!</string>
</resources>
