<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <TextView
        android:id="@+id/tituloAlimentoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cafe_da_manha"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/horarioRefeicaoTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/horarioRefeicaoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/horario_cafe_manha"
        app:layout_constraintEnd_toStartOf="@id/abreviacaoHoraTextView"
        app:layout_constraintStart_toEndOf="@id/tituloAlimentoTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kcalValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="3dp"
        android:text="@string/kcal_value_cafe_manha"
        app:layout_constraintEnd_toStartOf="@id/kcalTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tituloAlimentoTextView" />

    <TextView
        android:id="@+id/abreviacaoHoraTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/abreviacao_hora"
        app:layout_constraintStart_toEndOf="@id/horarioRefeicaoTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kcalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="3dp"
        android:text="@string/Kcal"
        app:layout_constraintEnd_toStartOf="@id/divider1"
        app:layout_constraintStart_toEndOf="@id/kcalValueTextView"
        app:layout_constraintTop_toBottomOf="@id/tituloAlimentoTextView" />

    <View
        android:id="@+id/divider1"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toStartOf="@id/proteinaValueTextView"
        app:layout_constraintStart_toEndOf="@id/kcalTextView"
        app:layout_constraintTop_toBottomOf="@id/tituloAlimentoTextView" />

    <TextView
        android:id="@+id/proteinaValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="3dp"
        android:text="@string/proteina_cafe_manha_value"
        app:layout_constraintEnd_toStartOf="@id/proteinaTextView"
        app:layout_constraintStart_toEndOf="@id/divider1"
        app:layout_constraintTop_toBottomOf="@id/tituloAlimentoTextView" />

    <TextView
        android:id="@+id/proteinaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="3dp"
        android:text="@string/prot"
        app:layout_constraintEnd_toStartOf="@id/divider5"
        app:layout_constraintStart_toEndOf="@id/proteinaValueTextView"
        app:layout_constraintTop_toBottomOf="@id/tituloAlimentoTextView" />

    <View
        android:id="@+id/divider5"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toStartOf="@id/carboidratoValueTextView"
        app:layout_constraintStart_toEndOf="@id/proteinaTextView"
        app:layout_constraintTop_toBottomOf="@id/tituloAlimentoTextView" />

    <TextView
        android:id="@+id/carboidratoValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="3dp"
        android:text="@string/carboidrato_cafe_manha_value"
        app:layout_constraintEnd_toStartOf="@id/carboidratoTextView"
        app:layout_constraintStart_toEndOf="@id/divider5"
        app:layout_constraintTop_toBottomOf="@id/tituloAlimentoTextView" />

    <TextView
        android:id="@+id/carboidratoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="3dp"
        android:text="@string/carb"
        app:layout_constraintEnd_toStartOf="@id/divider6"
        app:layout_constraintStart_toEndOf="@id/carboidratoValueTextView"
        app:layout_constraintTop_toBottomOf="@id/tituloAlimentoTextView" />

    <View
        android:id="@+id/divider6"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toStartOf="@id/gorduraValueTextView"
        app:layout_constraintStart_toEndOf="@id/carboidratoTextView"
        app:layout_constraintTop_toBottomOf="@id/tituloAlimentoTextView" />

    <TextView
        android:id="@+id/gorduraValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="3dp"
        android:text="@string/gordura_cafe_manha_value"
        app:layout_constraintEnd_toStartOf="@id/gorduraTextView"
        app:layout_constraintStart_toEndOf="@id/divider6"
        app:layout_constraintTop_toBottomOf="@id/tituloAlimentoTextView" />

    <TextView
        android:id="@+id/gorduraTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="50dp"
        android:text="@string/gord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gorduraValueTextView"
        app:layout_constraintTop_toBottomOf="@id/tituloAlimentoTextView" />

    <View
        android:id="@+id/divider7"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/proteinaTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>

