<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/nomeAlimentoTextView"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/alimento"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kcalDetalhadoValueTextView"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="32dp"
        android:text="@string/kcal_value_cafe_manha"
        app:layout_constraintBottom_toBottomOf="@id/divider7"
        app:layout_constraintBottom_toTopOf="@+id/divider7"
        app:layout_constraintEnd_toStartOf="@id/divider1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KcalTextView" />

    <View
        android:id="@+id/divider1"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@id/divider7"
        app:layout_constraintEnd_toStartOf="@id/proteinaDetalhadoValueTextView"
        app:layout_constraintStart_toEndOf="@id/kcalDetalhadoValueTextView"
        app:layout_constraintTop_toBottomOf="@+id/KcalTextView" />

    <TextView
        android:id="@+id/proteinaDetalhadoValueTextView"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="32dp"
        android:text="@string/proteina_cafe_manha_value"
        app:layout_constraintBottom_toTopOf="@+id/divider7"
        app:layout_constraintEnd_toStartOf="@id/divider5"
        app:layout_constraintStart_toEndOf="@id/divider1"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <View
        android:id="@+id/divider5"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@id/divider7"
        app:layout_constraintEnd_toStartOf="@id/carboidratoDetalhadoValueTextView"
        app:layout_constraintStart_toEndOf="@id/proteinaDetalhadoValueTextView"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/carboidratoDetalhadoValueTextView"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="32dp"
        android:text="@string/carboidrato_cafe_manha_value"
        app:layout_constraintBottom_toTopOf="@+id/divider7"
        app:layout_constraintEnd_toStartOf="@id/divider6"
        app:layout_constraintStart_toEndOf="@id/divider5"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <View
        android:id="@+id/divider6"
        android:layout_width="1dp"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@id/divider7"
        app:layout_constraintEnd_toStartOf="@id/gorduraDetalhadoValueTextView"
        app:layout_constraintStart_toEndOf="@id/carboidratoDetalhadoValueTextView"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/gorduraDetalhadoValueTextView"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="32dp"
        android:text="@string/gordura_cafe_manha_value"
        app:layout_constraintBottom_toTopOf="@+id/divider7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/divider6"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <View
        android:id="@+id/divider7"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="20dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/KcalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="3dp"
        android:text="@string/Kcal"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/kcalDetalhadoValueTextView"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/porcaoTextView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="3dp"
        android:text="@string/prot"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/proteinaDetalhadoValueTextView"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/KcalTextView"
        app:layout_constraintTop_toBottomOf="@+id/porcaoConsumidaTextView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="3dp"
        android:text="@string/carb"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/carboidratoDetalhadoValueTextView"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/porcaoTextView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="3dp"
        android:text="@string/gord"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gorduraDetalhadoValueTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/porcaoTextView" />

    <TextView
        android:id="@+id/porcaoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/porcao"
        app:layout_constraintBottom_toTopOf="@+id/KcalTextView"
        app:layout_constraintEnd_toStartOf="@+id/porcaoConsumidaTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeAlimentoTextView" />

    <TextView
        android:id="@+id/porcaoConsumidaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/cem"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/ingeridoCheckBox"
        app:layout_constraintStart_toEndOf="@+id/porcaoTextView"
        app:layout_constraintTop_toBottomOf="@+id/nomeAlimentoTextView" />

    <CheckBox
        android:id="@+id/ingeridoCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ingerido"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/porcaoConsumidaTextView"
        app:layout_constraintTop_toBottomOf="@+id/nomeAlimentoTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>