<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".navigation.BuscarAlimentoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/alimentoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:digits="@string/caracteres_aceitos_campo_string"
            android:ems="10"
            android:hint="@string/alimento"
            android:inputType="textPersonName"
            android:maxLength="100"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/buscarAlimentoButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/buscarAlimentoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="90dp"
            android:layout_marginBottom="100dp"
            android:text="@string/buscar"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alimentoText"
            app:layout_constraintVertical_bias="0.426" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>