<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="#FFFFFF"
    android:visibility="visible">

    <TextView
        android:id="@+id/statusMetaTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:text="@string/meta_atingida"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dataMetaTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/dataMetaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_10_08_2020"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/divider_horizontal"
        app:layout_constraintEnd_toStartOf="@+id/iconExpandirMeta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusMetaTextView" />

    <ImageView
        android:id="@+id/iconExpandirMeta"
        android:layout_width="44dp"
        android:layout_height="41dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/icone_para_expandir_meta"
        android:focusable="true"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_read_more_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/divider_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dataMetaTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/divider_horizontal"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/divider_de_um_alimento_para_outro"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_horizontal_rule_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>