<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".navigation.RecuperarCadastroFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/digite_o_seu_e_mail_utilizado_no_cadastro"
            android:textColor="#FA050000"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/emailText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="48dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/buscarButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/buscarButton"
            android:layout_width="172dp"
            android:layout_height="43dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/buscar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailText" />

        <ImageView
            android:id="@+id/exit"
            android:layout_width="33dp"
            android:layout_height="26dp"
            android:clickable="true"
            android:contentDescription="@string/cone_para_fechar_popup"
            android:focusable="true"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_close_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>